<resources>
    <!-- Splash闪屏界面用到的字符串 -->
    <string name="app_name">应用魔方</string>
    <string name="app_describe">一个魔幻的应用双开神器</string>

    <!-- 程序猿猴子界面用到的字符串 -->
    <string name="launching_app">"正在加载，请稍后..."</string>
    <string name="launching_app_failed_toast">"应用启动失败，请修复后再次尝试"</string>

    <!-- 应用Home主界面用到的字符串 -->
    <string name="tip_app_empty">尚未安装任何应用</string>
    <string name="pop_menu_uninstall">卸载</string>
    <string name="pop_menu_fix">一键修复</string>
    <string name="toast_tip_uninstall_failed">卸载失败!</string>
    <string name="home_importing">正在导入：%s</string>
    <string name="home_import_failed">导入失败</string>
    <string name="home_fixing">正在修复：%s</string>
    <string name="home_fix_done">修复成功</string>
    <string name="home_fix_fail">无需修复</string>
    <string name="home_fix_noneed">无需修复</string>
    <string name="home_app_wechat">微信</string>
    <string name="home_hint_import_wechat">点击导入微信</string>
    <string name="home_hint_import_more">这里可导入更多应用</string>
    <string name="home_toast_no_wechat">您的手机尚未安装微信</string>
    <string name="home_about">关于</string>
    <string name="home_uninstall_confirm">确定要卸载这款应用吗？</string>

    <!-- 应用导入界面用到的字符串 -->
    <string name="appimport_title">应用导入</string>
    <string name="appimport_loadapps">正在加载，请稍后...</string>
    <string name="appimport_noapps">您的手机尚未安装三方应用</string>

    <!-- 用户引导界面用到的字符串 -->
    <string name="userguide_title">用户引导</string>
    <string name="userguide_start">开始体验</string>

    <!-- 关于界面用到的字符串 -->
    <string name="about_title">关于</string>
    <string name="about_share_describe">一个魔幻的应用双开神器，扫一扫分享给朋友</string>

    <!-- 通用字符串 -->
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="single_user_tip">您的手机处于非“机主”模式，应用魔方暂不支持多用户模式，请将手机切换为“机主”模式后再尝试启动。</string>
</resources>
