<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/logo_rlayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <ImageView
            android:id="@+id/logo_img"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_centerInParent="true"
            android:src="@mipmap/ic_launcher_no_bg"
            android:scaleType="fitXY"/>
        <TextView
            android:id="@+id/app_name_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/logo_img"
            android:gravity="center"
            android:text="@string/app_name"
            android:textSize="30sp"
            android:textColor="@android:color/black"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/app_name_txt"
            android:gravity="center"
            android:text="@string/app_describe"
            android:textSize="20sp"
            android:textColor="@android:color/darker_gray"/>

    </RelativeLayout>

    <ImageView
        android:id="@+id/guide_img"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"/>

    <Button
        android:id="@+id/guide_btn"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="50dp"
        android:visibility="gone"
        android:text="@string/userguide_start"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:background="@drawable/rounded_rectangle"/>

</RelativeLayout>