<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:minHeight="60dp"
    android:minWidth="180dp"
    android:gravity="center"
    android:padding="10dp"
    android:background="@color/colorScreenBg">
    <TextView
        android:id="@+id/app_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:text="haha"
        />
    <TextView
        android:id="@+id/uninstall_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/app_name"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:textColor="@android:color/black"
        android:text="@string/home_uninstall_confirm"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/uninstall_confirm"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:weightSum="2">
        <TextView
            android:id="@+id/cancel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginRight="5dp"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="@android:color/white"
            android:background="@color/colorAccent"/>
        <TextView
            android:id="@+id/ok"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginLeft="5dp"
            android:gravity="center"
            android:text="@string/ok"
            android:textColor="@android:color/white"
            android:background="@color/colorAccent"/>
    </LinearLayout>
</RelativeLayout>